--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       </style>
     </head>
     <body>
-      <button id="changeColor"></button>
+      <button id="download"></button>
         <script src="popup.js"></script>
     </body>
   </html>
