Add content script

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,9 @@
       </style>
     </head>
     <body>
+        <label>Transcribe</label>
       <button id="download"></button>
+        <video name="test" src="https://d1b5wfhwav7hwn.cloudfront.net/content/73239c27-3352-4a41-99ef-448fb4e3ed3c/20/04/17/13/73239c27-3352-4a41-99ef-448fb4e3ed3c_1_200417T131327909Z.mp4?Expires=1587593325&Signature=QxZGdftSPrqGHxt6k5Et61b0pJrWD7T0V9Pxm58bcOqbcs2j~XX9FO8M2aqfsNEcDLL4TOECtjJF~VRv3N1en6lwiI3nPDX55h-QIU0JVGOJNZz49M0BUBkKeNfyAmS35l12XNozHuzX0GmeMd0Yd1enMovZMjs3r6lN6O7mJ7GbrORiaantutvIYUph5g8KvP1BejdfrhyWvJR4D19N1DfUaNyo~V1O0YmxBYdXsIudoh~cnwQFhkkH8Db3i1wOCX~Q2AOPgRCJsXzIDbo2ARe6rgkJ18uqgythmYYXaGAm~9JF1A41z6P1otnoma9Zkym-FhLN1EEdB7Y3gL2Ogw__&Key-Pair-Id=APKAIOBDBIMXUOQOBYVA"></video>
         <script src="popup.js"></script>
     </body>
   </html>
