Output transcript and summary in a new window

--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,13 @@
       <style>
         button {
           height: 30px;
-          width: 30px;
           outline: none;
         }
       </style>
     </head>
     <body>
         <label>Transcribe</label>
-      <button id="download"></button>
+      <button id="download">Start</button>
         <script src="popup.js"></script>
     </body>
   </html>
