put summary sentences into an array pop up loading stage

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,10 @@
       </style>
     </head>
     <body>
+      <div id="mainDiv">
         <label>Transcribe</label>
       <button id="download">Start</button>
+    </div>
         <script src="popup.js"></script>
     </body>
   </html>
